@@ -21,6 +21,7 @@ import org.apache.lucene.analysis.TokenStream;
 import org.apache.lucene.analysis.util.TokenFilterFactory;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 /**
@@ -57,8 +58,8 @@ public class ThrowingMockTokenFilterFactory extends TokenFilterFactory {
       public boolean incrementToken() throws IOException {
         if (input.incrementToken()) {
           try {
-            throw exceptionClass.newInstance();
-          } catch (IllegalAccessException | InstantiationException iae) {
+            throw exceptionClass.getConstructor().newInstance();
+          } catch (IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException iae) {
             throw new RuntimeException(iae);
           }
         }
